# rubilib

./: Cargo.toml  README.md
src/: binary.rs  blob.rs  lib.rs  table.rs
src/elf/: mod.rs  symbols.rs
src/pe/: mod.rs
