[package]
name = "rubilib"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
authors = ["Mark Beinker <mwb@quantlink.de>"]
description = "Binary analysis tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/rubian"
readme = "README.md"
keywords = ["binary"]
categories = ["library", "parsing"]

[dependencies]
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.21"
serde = {version="1", features=["derive"]}
